EXTRA_DIST = \
	     conf/match-alias.conf \
	     data/cosmo \
	     data/layer.grib1 \
	     data/test.bufr \
	     data/test.grib1 \
	     data/test-sorted.grib1 \
	     data/padded.grib1 \
	     data/padded.bufr \
	     data/pollution.bufr \
	     data/odim1.arkimet \
	     data/old.summary \
	     data/all.summary \
	     error/config \
	     dataset1/config \
	     misc/erse00.expa \
	     misc/rec-ts-alias.conf \
	     postproc/checkfiles \
	     postproc/error \
	     postproc/null \
	     postproc/say \
	     postproc/testcountbytes
