EXTRA_DIST += \
	     %reldir%/conf/match-alias.conf \
	     %reldir%/data/cosmo \
	     %reldir%/data/layer.grib1 \
	     %reldir%/data/test.bufr \
	     %reldir%/data/test.grib1 \
	     %reldir%/data/test-sorted.grib1 \
	     %reldir%/data/padded.grib1 \
	     %reldir%/data/padded.bufr \
	     %reldir%/data/pollution.bufr \
	     %reldir%/data/odim1.arkimet \
	     %reldir%/data/old.summary \
	     %reldir%/data/all.summary \
	     %reldir%/error/config \
	     %reldir%/dataset1/config \
	     %reldir%/misc/erse00.expa \
	     %reldir%/misc/rec-ts-alias.conf \
	     %reldir%/postproc/checkfiles \
	     %reldir%/postproc/error \
	     %reldir%/postproc/null \
	     %reldir%/postproc/say \
	     %reldir%/postproc/testcountbytes
